--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <div class="projectDiv">
         <div class="ProjectDetails">
           <span>News Website</span> <br>
-          I am develping an API-based news website using HTML, CSS, and JavaScript. The site fetches news from multiple sources and displays it on the page. It features sections such as entertainment, technology, health etc. to categorize the news for better user experience.
+          I am developing an API-based news website using HTML, CSS, and JavaScript. The site fetches news from multiple sources and displays it on the page. It features sections such as entertainment, technology, health etc. to categorize the news for better user experience.
           <a href="https://github.com/sakshirawat977/N-E-W-S-I-F-Y.git" target="_blank">
             <i class="fa-brands fa-github github"></i>click for code 
           </a>
